@@ -3,6 +3,13 @@
 PATH=${testdir}/tools:${PATH}; export PATH
 
 test_principal=`id -nu`
+test_host=@TESTHOST@
+
+if test @USE_ADDRESSES@ -eq 1 ; then
+	test_addresses=true
+else
+	test_addresses=false
+fi
 
 if test @USE_KRB4@ -eq 1 ; then
 	test_krb4=true
